--- a/test/src/main/resources/templates/message/index.html
+++ b/test/src/main/resources/templates/message/index.html
@@ -1,7 +1,37 @@
 <#include "header.html">
 
-<#list items as item>
-    ${item.name}
-</#list>
+    <div id="content">
+        <table id="msglist" width="90%" cellspacing="1" bgcolor="#eee">
+            <#assign k=1 />
+            <#list items as item>
+                <tr>
+                    <td class="listnum" width="5%">${item.id}</td>
+                    <td width="5%"><img src="/images/${k}.gif" /></td>
+                    <td width="15%">${item.name}</td>
+                    <td>${item.msg}</td>
+                    <td width="15%">${item.create_at?long?string('yyyy-MM-dd hh:mm:ss')}</td>
+                    <td width="5%"><a href="/message/edit?id=${item.id}">修改</a></td>
+                    <td width="5%"><a href="/message/delete?id=${item.id}">删除</a></td>
+                </tr>
+                <#if (k>1)> <#assign k=1 /> <#else> <#assign k=k+1 /> </#if>
+            </#list>
+        </table>
 
+        <form id="form1" name="form1" method="post" action="/message/add">
+            <table id="msgadd" width="90%" cellspacing="1" bgcolor="#eee">
+                <tr>
+                    <td width="30%">姓名</td>
+                    <td class="left"><input type="text" name="name" id="name" /></td>
+                </tr>
+                <tr>
+                    <td>留言</td>
+                    <td class="left"><textarea name="msg" id="msg" cols="45" rows="5"></textarea></td>
+                </tr>
+                <tr>
+                    <td colspan="2"><input type="submit" name="button" id="button" value="提 交" /></td>
+                </tr>
+            </table>
+        </form>
+
+    </div>
 <#include "footer.html">
