--- a/test/src/main/resources/templates/head.html
+++ b/test/src/main/resources/templates/head.html
@@ -1,8 +1,10 @@
-<!DOCTYPE html>
-<html>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-<title>首页</title>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8">  
-<script type="text/javascript" src="/js/jquery.js"></script>  
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <link rel="stylesheet" href="/css/default.css"/>
+    <script src="/js/jquery.js"></script>
+    <script src="/js/default.js"></script>
+    <title>My SSH Project Studio 测试</title>
 </head>
 <body>
