--- a/SpringData/src/main/resources/templates/head.html
+++ b/SpringData/src/main/resources/templates/head.html
@@ -7,4 +7,5 @@
     <script src="/js/default.js"></script>
     <title>My SSH Project Studio 测试</title>
 </head>
+<#setting datetime_format="yyyy-MM-dd HH:mm:ss"/>
 <body>
