--- a/SpringData/src/main/resources/templates/message/index.html
+++ b/SpringData/src/main/resources/templates/message/index.html
@@ -9,9 +9,13 @@
                     <td width="5%"><img src="/images/${k}.gif" /></td>
                     <td width="15%">${item.name}</td>
                     <td>${item.msg}</td>
-                    <td width="15%">${item.create_at?long?string('yyyy-MM-dd hh:mm:ss')}</td>
-                    <td width="5%"><a href="/message/edit?id=${item.id}">修改</a></td>
-                    <td width="5%"><a href="/message/delete?id=${item.id}">删除</a></td>
+                    <td width="7%">${(item.create_at*1000)?number_to_datetime}</td>
+                    <td width="7%">${(item.date?string("yyyy-MM-dd"))!}</td>
+                    <td width="5%">${item.days}</td>
+                    <td width="7%">${item.update_at}</td>
+                    <td width="5%">${item.ip}</td>
+                    <td width="5%"><a href="/message/edit/${item.id}">修改</a></td>
+                    <td width="5%"><a href="/message/delete/${item.id}">删除</a></td>
                 </tr>
                 <#if (k>1)> <#assign k=1 /> <#else> <#assign k=k+1 /> </#if>
             </#list>
