--- a/SpringData/src/main/resources/templates/message/index.html
+++ b/SpringData/src/main/resources/templates/message/index.html
@@ -7,7 +7,7 @@
                 <tr>
                     <td class="listnum" width="5%">${item.id}</td>
                     <td width="5%"><img src="/images/${k}.gif" /></td>
-                    <td width="15%">${item.name}</td>
+                    <td width="15%"><a href="/message/sql?name=${item.name}">${item.name}</a></td>
                     <td>${item.msg}</td>
                     <td width="7%">${((item.create_at*1000)?number_to_datetime)!}</td>
                     <td width="7%">${(item.date?string("yyyy-MM-dd"))!}</td>
