--- a/MyBatis/src/main/webapp/WEB-INF/templates/message/paged.html
+++ b/MyBatis/src/main/webapp/WEB-INF/templates/message/paged.html
@@ -12,7 +12,7 @@
                     <td width="7%">${((item.create_at*1000)?number_to_datetime)!}</td>
                     <td width="7%">${(item.date?string("yyyy-MM-dd"))!}</td>
                     <td width="5%">${item.days}</td>
-                    <td width="7%">${item.update_at}</td>
+                    <td width="7%">${(item.update_at?string("yyyy-MM-dd HH:mm:ss"))!}</td>
                     <td width="5%">${item.ip}</td>
                     <td width="5%"><a href="/message/edit/${item.id}">修改</a></td>
                     <td width="5%"><a href="/message/delete/${item.id}">删除</a></td>
