--- a/MyBatis/src/main/webapp/WEB-INF/templates/user/index.html
+++ b/MyBatis/src/main/webapp/WEB-INF/templates/user/index.html
@@ -41,7 +41,7 @@
                 <tr>
                     <td>部门</td>
                     <td class="left">
-                        <select class="input select" name="department" id="department">
+                        <select class="input select" name="dept_id" id="dept_id">
                             <#list depts as dept>
                                 <option value="${dept.id}">${dept.name}</option>
                             </#list>
@@ -52,7 +52,7 @@
                     <td>角色</td>
                     <td class="left checkbox">
                         <#list roles as role>
-                            <input type="checkbox" class="checkbox" name="roles" id="roles" value="${role.id}" />${role.name}&nbsp;&nbsp;&nbsp;&nbsp;
+                            <input type="checkbox" class="checkbox" name="roles_id" id="roles_id" value="${role.id}" />${role.name}&nbsp;&nbsp;&nbsp;&nbsp;
                         </#list>
                     </td>
                 </tr>
